--- a/Index.html
+++ b/Index.html
@@ -3,47 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <!-- '[[2021830 adnan mahmud]]' -->
 
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://kit.fontawesome.com/978a7dcb73.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
+    <!-- 2021830 adnan mahmud -->
     
-    <title>Coffee Shop</title>
-</head>
-<body>
-    <header class="header">
-        <nav class="nav">
-            <div class="logo">
-                <i class="fa-solid fa-mug-hot"></i>
-            </div>
-
-            <ul class="menu">
-                <li class="menu__item"> <a href="#">Home</a></li>
-                <li class="menu__item"> <a href="#">Product</a></li>
-                <li class="menu__item"> <a href="#">Contact</a></li>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="./Products.html">Products</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-
-        <div class="header__text">
-            <h3>Welcome to</h3>
-            <h1>Our shop coffee</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi laboriosam facere libero, minima nesciunt perferendis quibusdam beatae.</p>
-            <button>find your taste</button>
-        </div>
     </header>
-</body>
-</html>
+
+    <section class="hero">
+        
+        <h1>Welcome!</h1>
+        <p>This is a landing page example.</p>
+    </section>
+
+    <section class="about">
+        <img src="/images/coffee-logo-design-creative-idea-logo-elements-2.png" alt="About Us" class="about-image">
+        <div class="about-content">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at magna eget urna placerat ornare. In hac habitasse platea dictumst. Donec at est sed neque condimentum bibendum sed ut quam. Vivamus sed mauris vitae risus posuere consectetur.</p>
+        </div>
+    </section>
+
+    <section class="products">
+        <h2>Our Products</h2>
+        <div class="product-container">
+            <div class="product">
+                <img src="/images/1.png" alt="Product 1">
+                <h3>Product 1</h3>
+                <p>Product Description</p>
+            </div>
+            <div class="product">
+                <img src="/images/1.png" alt="Product 2">
+                <h3>Product 2</h3>
+                <p>Product Description</p>
+            </div>
+            <div class="product">
+                <img src="/images/1.png" alt="Product 3">
+                <h3>Product 3</h3>
+                <p>Product Description</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 All Rights Reserved</p>
+    </footer>
+
 </body>
 </html>
