--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
 
     <!-- 2021830 adnan mahmud -->
-    
+
     <header>
         <nav>
             <ul>
@@ -34,26 +34,38 @@
         </div>
     </section>
 
-    <section class="products">
-        <h2>Our Products</h2>
-        <div class="product-container">
-            <div class="product">
-                <img src="/images/1.png" alt="Product 1">
+    <section class="f-products">
+        <h2>Featured Products</h2>
+        <div class="f-product-container">
+            <div class="f-product">
+                <img src="/images/png-transparent-instant-coffee-latte-ipoh-white-coffee-cappuccino-coffee-gold-coffee-kona-coffee.png" alt="Product 1">
                 <h3>Product 1</h3>
-                <p>Product Description</p>
+                <p>$19.99</p>
             </div>
-            <div class="product">
-                <img src="/images/1.png" alt="Product 2">
+            <div class="f-product">
+                <img src="/images/png-transparent-instant-coffee-latte-ipoh-white-coffee-cappuccino-coffee-gold-coffee-kona-coffee.png" alt="Product 2">
                 <h3>Product 2</h3>
-                <p>Product Description</p>
+                <p>$24.99</p>
             </div>
-            <div class="product">
-                <img src="/images/1.png" alt="Product 3">
+            <div class="f-product">
+                <img src="/images/png-transparent-instant-coffee-latte-ipoh-white-coffee-cappuccino-coffee-gold-coffee-kona-coffee.png" alt="Product 3">
                 <h3>Product 3</h3>
-                <p>Product Description</p>
+                <p>$39.99</p>
             </div>
         </div>
     </section>
+
+    <section class="newsletter">
+        <div class="new-cont">
+            <h2>Stay Updated!</h2>
+        <p>Sign up for our newsletter to receive exclusive offers, new product announcements, and coffee brewing tips.</p>
+        </div>
+        
+        <form action="#">
+          <input type="email" name="email" placeholder="Enter your email address">
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
 
     <footer>
         <p>&copy; 2024 All Rights Reserved</p>
