--- a/Products.html
+++ b/Products.html
@@ -12,11 +12,12 @@
             <ul>
                 <li><a href="/Index.html">Home</a></li>
                 <li><a href="./Products.html">Products</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
+        <img class="logo" src="/images/logo.png" alt="Logo">
     </header>
-
+ <!-- 2021830 adnan mahmud -->
  <section class="products">
             <h2>Our Products</h2>
             <div class="product-container">
@@ -52,6 +53,30 @@
                 </div>
             </div>
         </section>
-    
+     <!-- 2021830 adnan mahmud -->
+        <footer>
+            <div class="footer">
+            <div class="row">
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-youtube"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            </div>
+            
+            <div class="row">
+            <ul>
+            <li><a href="/Index.html">Home</a></li>
+            <li><a href="/contact.html">Contact us</a></li>
+            <li><a href="/Products.html">Product</a></li>
+            </ul>
+            </div>
+           <!-- 2021830 adnan mahmud -->  
+            <div class="row">
+             Copyright © 2024 Mis455 - All rights reserved || Designed By: Adnan mahmud 
+            </div>
+            </div>
+            </footer>
+
+
 </body>
 </html>
